Added Redirect Entity

--- a/src/DotNetNinja.QrCodes/appsettings.json
+++ b/src/DotNetNinja.QrCodes/appsettings.json
@@ -3,7 +3,7 @@
     "CopyrightOwner": ".Net Ninja",
     "Name": ".Net Ninja QR Codes",
     "LogoUrl": "",
-    "ThemeName": "Default",
+    "ThemeName": "CustomTheme",
     "Themes": [
       {
         "Name": "CustomTheme",
